; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/regedit/extr_find.c_lstrstri.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/regedit/extr_find.c_lstrstri.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOCALE_SYSTEM_DEFAULT = common dso_local global i32 0, align 4
@NORM_IGNORECASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i64, i64)* @lstrstri to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @lstrstri(i64 %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = call i64 @wcslen(i64 %9)
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = call i64 @wcslen(i64 %11)
  store i64 %12, i64* %8, align 8
  store i64 0, i64* %6, align 8
  br label %13

13:                                               ; preds = %36, %2
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %7, align 8
  %16 = load i64, i64* %8, align 8
  %17 = sub nsw i64 %15, %16
  %18 = icmp sle i64 %14, %17
  br i1 %18, label %19, label %39

19:                                               ; preds = %13
  %20 = load i32, i32* @LOCALE_SYSTEM_DEFAULT, align 4
  %21 = load i32, i32* @NORM_IGNORECASE, align 4
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* %6, align 8
  %24 = add nsw i64 %22, %23
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* %5, align 8
  %27 = load i64, i64* %8, align 8
  %28 = call i32 @CompareStringW(i32 %20, i32 %21, i64 %24, i64 %25, i64 %26, i64 %27)
  %29 = icmp eq i32 %28, 2
  br i1 %29, label %30, label %35

30:                                               ; preds = %19
  %31 = load i64, i64* %4, align 8
  %32 = load i64, i64* %6, align 8
  %33 = add nsw i64 %31, %32
  %34 = inttoptr i64 %33 to i32*
  store i32* %34, i32** %3, align 8
  br label %40

35:                                               ; preds = %19
  br label %36

36:                                               ; preds = %35
  %37 = load i64, i64* %6, align 8
  %38 = add nsw i64 %37, 1
  store i64 %38, i64* %6, align 8
  br label %13

39:                                               ; preds = %13
  store i32* null, i32** %3, align 8
  br label %40

40:                                               ; preds = %39, %30
  %41 = load i32*, i32** %3, align 8
  ret i32* %41
}

declare dso_local i64 @wcslen(i64) #1

declare dso_local i32 @CompareStringW(i32, i32, i64, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
